# contagion

./: .rustfmt.toml  Cargo.toml  received_messages.txt  store1.txt
src/: main.rs  message.rs  network.rs
src/text_ui/: formatter.rs  mod.rs  utils.rs
src/text_ui/buffer/: mod.rs
src/text_ui/editor/: cursor.rs  mod.rs
src/text_ui/term_ui/: formatter.rs  mod.rs  screen.rs
