[package]
name = "contagion"
version = "0.1.0"
authors = ["Javed Mohamed <javbit@disroot.org>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
docopt = "1"
ropey = "0.9"
termion = "1.5"
unicode-segmentation = "1.2.1"
unicode-width = "0.1"
smallvec = "0.6"


[dependencies.backend]
path = "sub_crates/backend"
